<resources>
    <string name="app_name">HomeShop</string>
    <string name="error_connection">Sem conexão</string>
    <string name="error_request">Erro na requisição</string>
    <string name="email">Email</string>
    <string name="endereco">Endereço</string>
    <string name="cartao_credito">Cartão de Crédito</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="botaoCadastrarUsuario">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="invalid_server_response">Resposta inválida do servidor</string>
    <string name="atualizar">Atualizar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_maps">Map</string>
    <string name="qr_code_invalido">QRCode inválido</string>
    <string name="tab_produtos">Produtos</string>
    <string name="tab_carrinho">Meu Carrinho</string>
    <string name="menu_item_cadastrar">Cadastrar</string>
    <string name="menu_item_perfil">Alterar dados</string>
    <string name="menu_item_login">Login</string>
    <string name="preco_hard">R$45.00</string>
</resources>
